[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/StarndardTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/NewNoteBoard.gd" type="Script" id=2]

[node name="Tabs" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Contents" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Toolbar" type="HBoxContainer" parent="Contents"]
margin_right = 1024.0
margin_bottom = 22.0

[node name="NoteContentsEdit" type="LineEdit" parent="Contents/Toolbar"]
margin_right = 935.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "New Note Contents"

[node name="CreateNote" type="Button" parent="Contents/Toolbar"]
margin_left = 939.0
margin_right = 1024.0
margin_bottom = 22.0
text = "Create Note"

[node name="Items" type="ScrollContainer" parent="Contents"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/Items"]
margin_right = 1024.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteBoardButton" type="Button" parent="Contents"]
margin_top = 578.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Delete BRD"

[connection signal="text_entered" from="Contents/Toolbar/NoteContentsEdit" to="." method="_on_NoteContentsEdit_text_entered"]
[connection signal="pressed" from="Contents/Toolbar/CreateNote" to="." method="_on_CreateNote_pressed"]
[connection signal="pressed" from="Contents/DeleteBoardButton" to="." method="_on_DeleteBoardButton_pressed"]
